src/App.scss
@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');

$bg: #e7e7e7;
$dark-bg: #e7e7e7;
$text: #212121;
$primary: #212121;
$secondary: #666;
$projectLangSize: 40px;

* {
  line-height: 1.5;
}

html {
  background: $bg;
}

a {
  text-decoration: none !important;
  color: $text;
}

a:hover {
  border-bottom: solid 2px $secondary;
  margin-bottom: -2px;
}


.App {
  height: 100vh;
  width: 100vw;

  background: $dark-bg;
}

.Container {
  padding: 40px;
  padding-top: 20px;
  box-sizing: border-box;
  max-width: 732px;
  height: 100%;
  margin: auto;
  background: $bg;
}

.Header {
  color: $text;
}

.Name {
  padding: 0;
  margin: 0;
}

.Bio {
  color : $text;
  font-size: 20px;

}

.Contact {
  padding: 0;
  margin: 0;
}

// Tag Styles
.TagContainer {
  margin: 0;
  padding: 0;
  margin-left: -6px;


  .Tag {
    background: $bg;
    color: $text;
    border: 1px solid $text;
    font-size: 14px;
    padding:  0px 4px;
    border-radius: 4px;
    display: inline-block;
    margin: 6px;
    min-width: 50px;
    text-align: center;
    font-weight: normal;
  }

}

// Contact Menu Styles
.Menu {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
  justify-items: center;
  width: fit-content;
  grid-gap: 20px;
  padding-top: 30px;

  .MenuIcon {
    width: 24px;
    height: 24px;
    fill: $text;
  }
}

.Menu {
  
  padding: 8px 8px 8px 0px;
  a {
    color: $text;
    font-size: 18px;
    text-decoration: none;
    font-weight: 500;
  }

  .Selected {
    * {
      border-bottom: solid 2px $primary !important;
    }
  }

  .Separator {
    display: inline;
  }
}

// Projects Styles
.Project {
  display: grid;
  grid-template-areas: "plang pname"
                        ".     pdescription";
  grid-template-columns: $projectLangSize auto;
  grid-template-rows: $projectLangSize auto;
  padding-bottom: 20px;
  
  .ProjectName {
    color: $text;
    font-size: 20px;
    font-weight: 600;
    color: $primary;
    grid-area: pname;
    align-self: center;
    padding-left: 12px;
  }

  .ProjectDescription {
    color: $text;
    font-size: 16px;
    grid-area: pdescription;
    padding-left: 12px;

  }
  .ProjectLang {
    width:$projectLangSize;
    height:$projectLangSize;
    border-radius:$projectLangSize;
    font-size: 14px;
    font-weight: bold;
    color:$primary;
    line-height:$projectLangSize;
    text-align:center;
    background:$bg;
    border: 2px solid $primary;
    grid-area: plang;
     font-family: 'Roboto Mono', monospace;

  }
}

/* Mobile Styles*/
@media all and (max-width: 768px) {

  .Container {
    padding: 20px;
  }

  .Projects {
    .Project {
      .ProjectName {
        font-size: 16px;
      }

      .ProjectDescription {
        font-size: 14px;
      }
      .ProjectLang {
        width:30px;
        height:30px;
        border-radius:30px;
        font-size: 10px;
        font-weight: bold;
        line-height:30px;
        background:$bg;
      }
    }
  }
  .Menu {
    padding: 8px 8px 8px 0px;
    .MenuIcon {
      width: 20px;
      height: 20px;
    }
  }

  .Contact {
    font-size: 12px;
  }

  .TagContainer {
    .Tag {
      font-size: 12px;
      margin: 2px;
    }
  }

  .Bio {
    font-size: 14px;
    padding-bottom: 8px;
  }

  h3 {
    font-size: 16px;
    padding: 0;
    margin: 0;
    padding: 20px 0 10px 0;
  }

  h2 {
    font-size: 18px;
  }
}

